--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "ConexaoPadrao": "COLOCAR SUA CONNECTION STRING AQUI"
+    "ConexaoPadrao": "Host=localhost;Port=5432;Database=csharp-web-db;Username=admin;Password=admin;"
   }
 }
